--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "bootstrap": "^5.1.0",
         "bootstrap-icons": "^1.5.0",
         "datatables.net-bs5": "^1.10.25",
-        "jquery-confirm": "^3.3.4"
+        "jquery-confirm": "^3.3.4",
+        "pusher-js": "^7.0.3"
     }
 }
