--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@ckeditor/ckeditor5-build-classic": "^29.1.0",
         "axios": "^0.21",
         "jquery": "^3.6",
         "laravel-mix": "^6.0.6",
@@ -22,11 +21,13 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-decoupled-document": "^29.2.0",
         "@popperjs/core": "^2.9.3",
         "bootstrap": "^5.1.0",
         "bootstrap-icons": "^1.5.0",
         "datatables.net-bs5": "^1.10.25",
         "jquery-confirm": "^3.3.4",
-        "pusher-js": "^7.0.3"
+        "pusher-js": "^7.0.3",
+        "tinymce": "^5.9.2"
     }
 }
