--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.9.3",
+        "air-datepicker": "^3.0.0",
         "bootstrap": "^5.1.0",
-        "bootstrap-datepicker": "^1.9.0",
         "bootstrap-icons": "^1.5.0",
         "datatables.net-bs5": "^1.10.25",
         "jquery-confirm": "^3.3.4",
