--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "bootstrap-icons": "^1.9.1",
         "chart.js": "^3.9.1",
         "datatables.net-bs5": "^1.10.25",
+        "fullcalendar": "^5.11.3",
         "jquery-confirm": "^3.3.4",
         "pusher-js": "^7.0.3",
         "tinymce": "^5.9.2"
