npm update işlemi yapıldı

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -203,6 +203,8 @@
     "/js/air-datepicker/air-datepicker.d.ts": "/js/air-datepicker/air-datepicker.d.ts",
     "/js/air-datepicker/air-datepicker.js": "/js/air-datepicker/air-datepicker.js",
     "/js/air-datepicker/index.es.js": "/js/air-datepicker/index.es.js",
+    "/js/air-datepicker/locale/ar.d.ts": "/js/air-datepicker/locale/ar.d.ts",
+    "/js/air-datepicker/locale/ar.js": "/js/air-datepicker/locale/ar.js",
     "/js/air-datepicker/locale/cs.d.ts": "/js/air-datepicker/locale/cs.d.ts",
     "/js/air-datepicker/locale/cs.js": "/js/air-datepicker/locale/cs.js",
     "/js/air-datepicker/locale/da.d.ts": "/js/air-datepicker/locale/da.d.ts",
@@ -219,6 +221,8 @@
     "/js/air-datepicker/locale/fr.js": "/js/air-datepicker/locale/fr.js",
     "/js/air-datepicker/locale/hu.d.ts": "/js/air-datepicker/locale/hu.d.ts",
     "/js/air-datepicker/locale/hu.js": "/js/air-datepicker/locale/hu.js",
+    "/js/air-datepicker/locale/it.d.ts": "/js/air-datepicker/locale/it.d.ts",
+    "/js/air-datepicker/locale/it.js": "/js/air-datepicker/locale/it.js",
     "/js/air-datepicker/locale/nl.d.ts": "/js/air-datepicker/locale/nl.d.ts",
     "/js/air-datepicker/locale/nl.js": "/js/air-datepicker/locale/nl.js",
     "/js/air-datepicker/locale/pl.d.ts": "/js/air-datepicker/locale/pl.d.ts",
@@ -231,8 +235,18 @@
     "/js/air-datepicker/locale/ro.js": "/js/air-datepicker/locale/ro.js",
     "/js/air-datepicker/locale/ru.d.ts": "/js/air-datepicker/locale/ru.d.ts",
     "/js/air-datepicker/locale/ru.js": "/js/air-datepicker/locale/ru.js",
+    "/js/air-datepicker/locale/si.d.ts": "/js/air-datepicker/locale/si.d.ts",
+    "/js/air-datepicker/locale/si.js": "/js/air-datepicker/locale/si.js",
     "/js/air-datepicker/locale/sk.d.ts": "/js/air-datepicker/locale/sk.d.ts",
     "/js/air-datepicker/locale/sk.js": "/js/air-datepicker/locale/sk.js",
+    "/js/air-datepicker/locale/sv.d.ts": "/js/air-datepicker/locale/sv.d.ts",
+    "/js/air-datepicker/locale/sv.js": "/js/air-datepicker/locale/sv.js",
+    "/js/air-datepicker/locale/th.d.ts": "/js/air-datepicker/locale/th.d.ts",
+    "/js/air-datepicker/locale/th.js": "/js/air-datepicker/locale/th.js",
+    "/js/air-datepicker/locale/tr.d.ts": "/js/air-datepicker/locale/tr.d.ts",
+    "/js/air-datepicker/locale/tr.js": "/js/air-datepicker/locale/tr.js",
+    "/js/air-datepicker/locale/uk.d.ts": "/js/air-datepicker/locale/uk.d.ts",
+    "/js/air-datepicker/locale/uk.js": "/js/air-datepicker/locale/uk.js",
     "/js/air-datepicker/locale/zh.d.ts": "/js/air-datepicker/locale/zh.d.ts",
     "/js/air-datepicker/locale/zh.js": "/js/air-datepicker/locale/zh.js",
     "/js/air-datepicker/package.json": "/js/air-datepicker/package.json",
